--- a/package.json
+++ b/package.json
@@ -30,21 +30,26 @@
     "server": "npm run server:dev",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base dist",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:prod": "http-server dist --cors"
+    "server:prod": "http-server dist --cors",
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "test": "karma start"
   },
   "author": "Junichi Kato",
   "license": "MIT",
   "dependencies": {
     "core-js": "^2.4.1",
-    "jquery": "^3.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
-    "@types/jquery": "^1.10.31",
+    "@types/hammerjs": "^2.0.32",
+    "@types/jasmine": "^2.2.33",
+    "@types/node": "^6.0.38",
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
+    "@types/selenium-webdriver": "^2.44.28",
+    "@types/webpack": "^1.12.33",
     "awesome-typescript-loader": "^2.0.0",
     "codelyzer": "0.0.28",
     "copy-webpack-plugin": "^3.0.1",
@@ -52,10 +57,23 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine": "^2.5.1",
     "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "raw-loader": "^0.5.1",
+    "source-map-loader": "^0.1.5",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "^1.1.1",
+    "ts-node": "^1.3.0",
+    "tslint": "^3.15.1",
+    "tslint-loader": "^2.1.5",
     "typescript": "2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
