Added support for protractor.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "hammerjs",
       "jasmine",
       "node",
+      "protractor",
       "selenium-webdriver",
       "source-map",
       "uglify-js",
