--- a/package.json
+++ b/package.json
@@ -3,36 +3,52 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "rimraf": "rimraf",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "webpack": "webpack --display-error-details",
-    "webpack-dev-server": "webpack-dev-server",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
-    "clean:dist": "npm run rimraf -- dist",
-    "preclean:install": "npm run clean",
-    "clean:install": "npm set progress=false && npm install",
-    "preclean:start": "npm run clean",
-    "clean:start": "npm start",
-    "watch": "npm run watch:dev",
-    "watch:dev": "npm run build:dev -- --watch",
-    "watch:dev:hmr": "npm run watch:dev -- --hot",
-    "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch:prod": "npm run build:prod -- --watch",
-    "build": "npm run build:dev",
-    "prebuild:dev": "npm run clean:dist",
-    "build:dev": "webpack --display-error-details --config config/webpack.dev.js --progress --profile",
-    "prebuild:prod": "npm run clean:dist",
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
+    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
     "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
-    "github-deploy": "npm run github-deploy:dev",
+    "build": "npm run build:dev",
+    "ci": "npm run lint && npm test && npm run e2e",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:install": "npm set progress=false && npm install",
+    "clean:start": "npm start",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "docker": "docker",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "e2e": "npm run protractor",
     "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
     "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base dist",
-    "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:prod": "http-server dist --cors",
+    "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
-    "test": "karma start"
+    "postversion": "git push && git push --tags",
+    "prebuild:dev": "npm run clean:dist",
+    "prebuild:prod": "npm run clean:dist",
+    "preclean:install": "npm run clean",
+    "preclean:start": "npm run clean",
+    "pree2e": "npm run webdriver:update -- --standalone",
+    "preversion": "npm test",
+    "protractor": "protractor",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --inline --hot",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:prod": "http-server dist --cors",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "npm run server:dev",
+    "test": "karma start",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "version": "npm run build",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:prod": "npm run build:prod -- --watch",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch": "npm run watch:dev",
+    "webdriver-manager": "webdriver-manager",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webpack-dev-server": "webpack-dev-server",
+    "webpack": "webpack"
   },
   "author": "Junichi Kato",
   "license": "MIT",
@@ -46,6 +62,7 @@
     "@types/hammerjs": "^2.0.32",
     "@types/jasmine": "^2.2.33",
     "@types/node": "^6.0.38",
+    "@types/protractor": "^1.5.18",
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
     "@types/selenium-webdriver": "^2.44.28",
@@ -67,6 +84,7 @@
     "karma-mocha-reporter": "^2.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "protractor": "^4.0.5",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.1.5",
     "to-string-loader": "^1.1.4",
